fixing flex-wrap on movie cards

--- a/src/App.css
+++ b/src/App.css
@@ -7,9 +7,9 @@ body {
 
 .container {
   margin: 0 auto;
+ 
 
   width: 100%;
-  max-width: 100%;
 
   padding: 20px;
 }
@@ -28,13 +28,17 @@ p {
 
 .user-list {
   width: auto;
-  display: flex;
+
+   display: flex;
   flex-wrap: wrap;
 }
 
 .user {
+ 
   width: 50%;
 }
+
+
 
 .user-card {
   background-color: #fff;
@@ -43,6 +47,10 @@ p {
   transition: 0.3s;
   cursor: pointer;
   border-radius: 10px;
+
+ 
+ 
+
 }
 
 .user-card:hover {
@@ -51,7 +59,10 @@ p {
 
 .user-card__container {
   padding: 2px 16px;
-  flex-wrap: wrap;
+
+
+
+  
 }
 
 .post-card {
